[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reloadcat"
authors = [
  {name = "Perry", email = "perryism@gmail.com"},
]
version = "0.2.0"
description = "reloadcat is a tool for reloading tests in a loop"
readme = "README.md"
requires-python = ">=3.6"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}